Fixed text overflow

--- a/style.css
+++ b/style.css
@@ -91,7 +91,7 @@ h2 {
 .versus {
     height: 4rem;
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-    font-size: 1.6rem;
+    font-size: 1.5rem;
     width: 15vw;
     min-width: 14rem;
     border: 2px solid #F17105;
